@@ -11,6 +11,7 @@ v1.0 - Pending
 	+ Play friendler with other clients for shuffle/repeat
 	+ Reduced startup time
 	+ Ability to run on OLPC's Sugar user environment (Owen)
+	+ Removed unused pickle module
 	+ Bug: Fixed more occassional interface freezes due to threading
 	+ Bug: Cannot set album art for album/artist with "/" in name
 	+ Bug: Prevent interface jumping because of progress bar font
